--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,10 @@
 JinCore 変更履歴
 
 
+1.206.4 (2011-05-10)
+    ・リファクタリングのみ、仕様変更無し。
+    ・Mavenプラグイン更新。
+
 1.206.2 (2010-12-02)
     ・CHECKOUTイベントの追加。
 
