ninjin氏の連絡先を http://ninjinix.com へ変更。

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,9 @@
 JinCore 変更履歴
 
 
+1.206.5-SNAPSHOT (201X-XX-XX)
+    ・ninjin氏の連絡先を http://ninjinix.com へ変更。
+
 1.206.4 (2011-05-10)
     ・リファクタリングのみ、仕様変更無し。
     ・Mavenプラグイン更新。
