--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,9 +4,10 @@
 JinCore 変更履歴
 
 
-1.206.7-SNAPSHOT (2016-XX-XX)
-    ・OSDN.JP対応。
+1.206.8 (2016-06-17)
+    ・必須環境をJRE7に引き上げ。
     ・Mavenプラグイン更新。
+    ・OSDN.JP対応。
 
 1.206.6 (2012-06-20)
     ・Maven3対応。
