modify project info

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,10 @@
 JinCore 変更履歴
 
 
+1.206.X (2017-04-XX)
+    ・F国URL変更に対応。
+    ・ja.osdn.net対応。
+
 1.206.8 (2016-06-17)
     ・必須環境をJRE7に引き上げ。
     ・Mavenプラグイン更新。
