update wolfg status.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,9 @@
 JinCore 変更履歴
 
 
+1.20X.X (2020-XX-XX)
+    ・G国亡国に対応。
+
 1.206.112 (2019-05-04)
     ・必須環境をJavaSE8に引き上げ。
     ・Mercurial(1.206.11-SNAPSHOT)からGit(1.206.111-SNAPSHOT)へSCMを移行。
