--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,8 +3,10 @@
 
 JinCore 変更履歴
 
+1.207.X (2023-10-XX)
+    ・ホスティングをOSDNからGitHubへ移行。
 
-1.207.6 (2022-10_08)
+1.207.6 (2022-10-08)
     ・deprecatedなLocale()コンストラクタ呼び出しをJDK19のために回避する。
 
 1.207.4 (2020-10-11)
