--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,6 +5,7 @@ JinCore 変更履歴
 
 1.207.X (2023-10-XX)
     ・ホスティングをOSDNからGitHubへ移行。
+    ・JDK21対応
 
 1.207.6 (2022-10-08)
     ・deprecatedなLocale()コンストラクタ呼び出しをJDK19のために回避する。
